--- a/css/style.css
+++ b/css/style.css
@@ -150,10 +150,12 @@ a:link {
 
 .subtitle, .subtitle-s {
   font-size: 1.2rem;
-  margin: 0.4rem 0 0.2rem; }
+  margin: 0.4rem 0 0.2rem;
+  white-space: nowrap; }
 
 .subtitle-s {
-  font-size: 1.05rem; }
+  font-size: 1.05rem;
+  white-space: nowrap; }
 
 .label, .selection {
   font-weight: 600;
@@ -571,7 +573,7 @@ a:link {
   transform: none; }
 
 /* --------------------------------------------------------------------- */
-/* Menu */
+/* Media Queries */
 /* --------------------------------------------------------------------- */
 @media only screen and (min-width: 1350px) {
   #effects-content {
@@ -613,10 +615,37 @@ a:link {
   #effects-content {
     display: grid;
     column-gap: 2rem;
-    grid-template-columns: repeat(7, 1fr); } }
-
-@media only screen and (min-width: 2100px) {
-  #effects-content {
-    display: grid;
-    column-gap: 2rem;
-    grid-template-columns: repeat(8, 1fr); } }
+    grid-template-columns: repeat(7, 1fr); }
+  #filters {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; }
+  #delay {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3; }
+  #chorus {
+    grid-column: 4 / 5;
+    grid-row: 2; }
+  #reverb {
+    grid-column: 3 / 4;
+    grid-row: 1; }
+  #tremolo {
+    grid-column: 5 / 6;
+    grid-row: 1; }
+  #phaser {
+    grid-column: 4 / 5;
+    grid-row: 1; }
+  #vibrato {
+    grid-column: 5 / 6;
+    grid-row: 2; }
+  #distortion {
+    grid-column: 3 / 4;
+    grid-row: 2; }
+  #frequency-shifter {
+    grid-column: 6 / 7;
+    grid-row: 1; }
+  #bit-crusher {
+    grid-column: 6 / 7;
+    grid-row: 2; }
+  #chebyshev {
+    grid-column: 7 / 8;
+    grid-row: 1; } }
