--- a/scss/style.scss
+++ b/scss/style.scss
@@ -192,11 +192,13 @@ a:link {
   @extend .title;
   font-size: 1.2rem;
   margin: 0.4rem 0 0.2rem;
+  white-space: nowrap;
 }
 
 .subtitle-s {
   @extend .subtitle;
   font-size: 1.05rem;
+  white-space: nowrap;
 }
 
 .label {
@@ -832,7 +834,7 @@ a:link {
 }
 
 /* --------------------------------------------------------------------- */
-/* Menu */
+/* Media Queries */
 /* --------------------------------------------------------------------- */
 @media only screen and (min-width: 1350px) {
   #effects-content {
@@ -888,15 +890,67 @@ a:link {
     column-gap: 2rem;
     grid-template-columns: repeat(7, 1fr);
   }
-}
 
-@media only screen and (min-width: 2100px) {
-  #effects-content {
-    display: grid;
-    column-gap: 2rem;
-    grid-template-columns: repeat(8, 1fr);
+  #filters {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+
+  #delay {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  #chorus {
+    grid-column: 4 / 5;
+    grid-row: 2;
+  }
+
+  #reverb {
+    grid-column: 3 / 4;
+    grid-row: 1;
+  }
+
+  #tremolo {
+    grid-column: 5 / 6;
+    grid-row: 1;
+  }
+
+  #phaser {
+    grid-column: 4 / 5;
+    grid-row: 1;
+  }
+
+  #vibrato {
+    grid-column: 5 / 6;
+    grid-row: 2;
+  }
+
+  #distortion {
+    grid-column: 3 / 4;
+    grid-row: 2;
+  }
+
+  #frequency-shifter {
+    grid-column: 6 / 7;
+    grid-row: 1;
+  }
+
+  #bit-crusher {
+    grid-column: 6 / 7;
+    grid-row: 2;
+  }
+
+  #chebyshev {
+    grid-column: 7 / 8;
+    grid-row: 1;
   }
 }
+
+
+// ===========================================================================
+// ===========================================================================
+
 
 // @media only screen and (min-width: 1500px) {
 //   #effects-content {
@@ -906,54 +960,58 @@ a:link {
 //   }
 
 //   #filters {
-//     grid-column: 1 / 2;
-//     grid-row: 1;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #delay {
-//     grid-column: 2 / 3;
-//     grid-row: 1;
-//     height: fit-content;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #chorus {
-//     grid-column: 1 / 2;
-//     grid-row: 2;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #reverb {
-//     grid-column: 2 / 3;
-//     grid-row: 2;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #tremolo {
-//     grid-column: 1 / 2;
-//     grid-row: 3;
+//     grid-column:  / ;
+//     grid-row: ;
+//   }
+
+//   #phaser {
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #vibrato {
-//     grid-column: 2 / 3;
-//     grid-row: 3;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #distortion {
-//     grid-column: 1 / 2;
-//     grid-row: 4;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #frequency-shifter {
-//     grid-column: 2 / 3;
-//     grid-row: 4;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #bit-crusher {
-//     grid-column: 1 / 2;
-//     grid-row: 5;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 
 //   #chebyshev {
-//     grid-column: 2 / 3;
-//     grid-row: 5;
+//     grid-column:  / ;
+//     grid-row: ;
 //   }
 // }
 
