dark mode preparations

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,6 +46,7 @@ $header-font: calc($header-size / 3);
 
 html,
 body {
+  // background: $black;
   font-family: "Spartan", sans-serif;
   // overflow: hidden; /* Hide scrollbars */
   font-size: 90%;
