--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,6 +52,10 @@ body {
   font-size: 90%;
 }
 
+canvas {         // for t he p5.js background
+  z-index: -1;
+}
+
 ::-moz-selection {
   // sets color of element (usually text) selection
   background: $dark-gray;
@@ -1148,6 +1152,3 @@ a:link {
 // }
 
 
-canvas {
-  z-index: -1;
-}
