--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,7 +52,8 @@ body {
   font-size: 90%;
 }
 
-canvas {         // for t he p5.js background
+canvas {
+  // for t he p5.js background
   z-index: -1;
 }
 
@@ -854,99 +855,212 @@ a:link {
 /* --------------------------------------------------------------------- */
 /* Media Queries */
 /* --------------------------------------------------------------------- */
-// @media only screen and (min-width: 1350px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(2, 1fr);
-//   }
-// }
 
-// @media only screen and (min-width: 1465px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(3, 1fr);
-//   }
-// }
 
-// @media only screen and (min-width: 1580px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(4, 1fr);
-//   }
-// }
 
-// @media only screen and (min-width: 1700px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(5, 1fr);
-//   }
-// }
-
-// @media only screen and (min-width: 1800px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(6, 1fr);
-//   }
-// }
-
-// @media only screen and (min-width: 1900px) {
-//   #effects-content {
-//     display: grid;
-//     column-gap: 2rem;
-//     grid-template-columns: repeat(6, 1fr);
-//   }
-// }
-
-@media only screen and (min-width: 2155px) {
+@media only screen and (min-width: 1585px) {
   #effects-content {
     display: grid;
     column-gap: 2rem;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
-  #filters {
+  #auto-filter {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
-  }
-
-  #delay {
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
+    grid-row: 1;
   }
 
   #chorus {
-    grid-column: 4 / 5;
+    grid-column: 1 / 2;
     grid-row: 2;
   }
 
+  #chorus-content {
+    display: grid;
+  }
+
+  #phaser {
+    grid-column: 1 / 2;
+    grid-row: 3;
+  }
+
+  #phaser-content {
+    display: grid;
+  }
+
   #reverb {
+    grid-column: 2 / 3;
+    grid-row: 3;
+  }
+
+  #reverb-content {
+    display: flex;
+  }
+
+  #feedback-delay {
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+
+  #feedback-delay-content {
+    display: flex;
+  }
+
+  #ping-pong {
+    grid-column: 2 / 3;
+    grid-row: 2;
+  }
+
+  #ping-pong-delay-content {
+    display: flex;
+  }
+
+  #tremolo {
     grid-column: 3 / 4;
     grid-row: 1;
   }
 
-  #tremolo {
-    grid-column: 5 / 6;
-    grid-row: 1;
-  }
-
-  #phaser {
-    grid-column: 4 / 5;
-    grid-row: 1;
+  #tremolo-content {
+    display: flex;
   }
 
   #vibrato {
-    grid-column: 5 / 6;
+    grid-column: 3 / 4;
     grid-row: 2;
+  }
+
+  #vibrato-content {
+    display: flex;
   }
 
   #distortion {
     grid-column: 3 / 4;
+    grid-row: 3;
+  }
+
+  #distortion-content {
+    display: flex;
+  }
+
+  #bit-crusher {
+    grid-column: 4 / 5;
+    grid-row: 1;
+  }
+
+  #bit-crusher-content {
+    display: flex;
+  }
+
+  #frequency-shifter {
+    grid-column: 4 / 5;
     grid-row: 2;
+  }
+
+  #frequency-shifter-content {
+    display: flex;
+  }
+
+  #chebyshev {
+    grid-column: 4 / 5;
+    grid-row: 3;
+  }
+
+  #chebyshev-content {
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 1986px) {
+  #effects-content {
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  #auto-filter {
+    grid-column: 1 / 2;
+    grid-row: 1;
+  }
+
+  #chorus {
+    grid-column: 1 / 2;
+    grid-row: 2;
+  }
+
+  #chorus-content {
+    display: grid;
+  }
+
+  #phaser {
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+
+  #phaser-content {
+    display: grid;
+  }
+
+  #reverb {
+    grid-column: 2 / 3;
+    grid-row: 2;
+  }
+
+  #reverb-content {
+    display: flex;
+  }
+
+  #feedback-delay {
+    grid-column: 3 / 4;
+    grid-row: 1;
+  }
+
+  #feedback-delay-content {
+    display: flex;
+  }
+
+  #ping-pong {
+    grid-column: 3 / 4;
+    grid-row: 2;
+  }
+
+  #ping-pong-delay-content {
+    display: flex;
+  }
+
+  #tremolo {
+    grid-column: 4 / 5;
+    grid-row: 1;
+  }
+
+  #tremolo-content {
+    display: flex;
+  }
+
+  #vibrato {
+    grid-column: 4 / 5;
+    grid-row: 2;
+  }
+
+  #vibrato-content {
+    display: flex;
+  }
+
+  #distortion {
+    grid-column: 5 / 6;
+    grid-row: 1;
+  }
+
+  #distortion-content {
+    display: flex;
+  }
+
+  #bit-crusher {
+    grid-column: 5 / 6;
+    grid-row: 2;
+  }
+
+  #bit-crusher-content {
+    display: flex;
   }
 
   #frequency-shifter {
@@ -954,15 +1068,16 @@ a:link {
     grid-row: 1;
   }
 
-  #bit-crusher {
+  #frequency-shifter-content {
+    display: flex;
+  }
+
+  #chebyshev {
     grid-column: 6 / 7;
     grid-row: 2;
   }
 
-  #chebyshev {
-    grid-column: 7 / 8;
-    grid-row: 1;
+  #chebyshev-content {
+    display: flex;
   }
 }
-
-
