--- a/sass/style.scss
+++ b/sass/style.scss
@@ -856,7 +856,117 @@ a:link {
 /* Media Queries */
 /* --------------------------------------------------------------------- */
 
+// @media only screen and (min-width: 1485px) {
+//   #effects-content {
+//     display: grid;
+//     column-gap: 2rem;
+//     grid-template-columns: repeat(3, 1fr);
+//   }
 
+//   #auto-filter {
+//     grid-column: 1 / 2;
+//     grid-row: 1;
+//   }
+
+//   #chorus {
+//     grid-column: 1 / 2;
+//     grid-row: 2;
+//   }
+
+//   #chorus-content {
+//     display: grid;
+//   }
+
+//   #phaser {
+//     grid-column: 1 / 2;
+//     grid-row: 3;
+//   }
+
+//   #phaser-content {
+//     display: grid;
+//   }
+
+//   #reverb {
+//     grid-column: 2 / 3;
+//     grid-row: 3;
+//   }
+
+//   #reverb-content {
+//     display: flex;
+//   }
+
+//   #feedback-delay {
+//     grid-column: 2 / 3;
+//     grid-row: 1;
+//   }
+
+//   #feedback-delay-content {
+//     display: flex;
+//   }
+
+//   #ping-pong {
+//     grid-column: 2 / 3;
+//     grid-row: 2;
+//   }
+
+//   #ping-pong-delay-content {
+//     display: flex;
+//   }
+
+//   #tremolo {
+//     grid-column: 3 / 4;
+//     grid-row: 1;
+//   }
+
+//   #tremolo-content {
+//     display: flex;
+//   }
+
+//   #vibrato {
+//     grid-column: 3 / 4;
+//     grid-row: 2;
+//   }
+
+//   #vibrato-content {
+//     display: flex;
+//   }
+
+//   #distortion {
+//     grid-column: 3 / 4;
+//     grid-row: 3;
+//   }
+
+//   #distortion-content {
+//     display: flex;
+//   }
+
+//   #bit-crusher {
+//     grid-column: 4 / 5;
+//     grid-row: 1;
+//   }
+
+//   #bit-crusher-content {
+//     display: flex;
+//   }
+
+//   #frequency-shifter {
+//     grid-column: 4 / 5;
+//     grid-row: 2;
+//   }
+
+//   #frequency-shifter-content {
+//     display: flex;
+//   }
+
+//   #chebyshev {
+//     grid-column: 4 / 5;
+//     grid-row: 3;
+//   }
+
+//   #chebyshev-content {
+//     display: flex;
+//   }
+// }
 
 @media only screen and (min-width: 1585px) {
   #effects-content {
