p5js background removal

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,10 +52,10 @@ body {
   font-size: 90%;
 }
 
-canvas {
-  // for t he p5.js background
-  z-index: -1;
-}
+// canvas {
+//   // for t he p5.js background
+//   z-index: -1;
+// }
 
 ::-moz-selection {
   // sets color of element (usually text) selection
