MIDI input device selectable

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -297,7 +297,12 @@ a:link {
   color: $black;
   font-size: 0.9rem;
   line-height: 1.4rem;
-  margin-right: 2rem;
+  margin-right: 2rem; 
+}
+
+.midi-selector:hover {
+  font-weight: 500;
+  cursor: pointer;
 }
 
 /* --------------------------------------------------------------------- */
