--- a/sass/style.scss
+++ b/sass/style.scss
@@ -732,6 +732,7 @@ a:link {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  appearance: none;
   -webkit-appearance: none;
   border: 0;
   background: transparent;
