--- a/src/components/envelopeComponent.scss
+++ b/src/components/envelopeComponent.scss
@@ -8,7 +8,7 @@
 			text-align: center;
 		}
 	}
-	.envelope-select-wrapper {
+	.envelope-curves-wrapper {
 		// display: flex;
 		// flex-direction: column;
 		// justify-content: space-between;
