--- a/src/components/waveformComponent.scss
+++ b/src/components/waveformComponent.scss
@@ -1,7 +1,7 @@
 .waveform-component {
 	text-align: center;
 
-	.type > div {
+	.type {
 		margin: 0.25rem auto 0;
 	}
 
@@ -16,7 +16,7 @@
 		font-weight: 500;
 	}
 
-	.partial-count > div {
+	.partial-count {
 		margin: 0 auto 1rem;
 	}
 
